--- a/onlinecompiler.client/package.json
+++ b/onlinecompiler.client/package.json
@@ -15,10 +15,14 @@
     "@emotion/styled": "^11.13.0",
     "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^6.1.2",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.9",
     "framer-motion": "^11.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-lottie-player": "^2.1.0"
+    "react-icons": "^5.3.0",
+    "react-lottie-player": "^2.1.0",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
